lint files and add to travis

--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -3,3 +3,23 @@ disabled_rules:
   - function_body_length
   - identifier_name
   - todo
+  - type_name
+  - type_body_length
+
+enabled_rules:
+  - vertical_parameter_alignment_on_call
+  - trailing_closure
+  - sorted_imports
+  - redundant_type_annotation
+  - operator_usage_whitespace
+  - modifier_order
+  - missing_docs
+  - implicit_return
+  - function_default_parameter_at_end
+  - fatal_error_message
+
+excluded:
+  - build
+  - .build
+  - docs
+  - Tests
