--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 os:
   - linux
-#  - osx
+  - osx
 language: generic
 sudo: required
 dist: trusty
@@ -34,6 +34,7 @@ install:
 before_script:
   - mkdir ${PWD}/mongodb-${MONGODB_VERSION}/data
   - ${PWD}/mongodb-${MONGODB_VERSION}/bin/mongod --dbpath ${PWD}/mongodb-${MONGODB_VERSION}/data --logpath ${PWD}/mongodb-${MONGODB_VERSION}/mongodb.log --enableMajorityReadConcern --fork
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then swiftlint; fi
 
 script:
   # - make
