--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -6,7 +6,7 @@ disabled_rules:
   - type_name
   - type_body_length
 
-enabled_rules:
+opt_in_rules:
   - vertical_parameter_alignment_on_call
   - trailing_closure
   - sorted_imports
