Run swiftlint with --strict on Travis
This should return non-zero error codes whenever there is even one
linter warning. This should help us catch linter issues that introduced
as parts of PRs.

--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,7 @@ install:
 before_script:
   - mkdir ${PWD}/mongodb-${MONGODB_VERSION}/data
   - ${PWD}/mongodb-${MONGODB_VERSION}/bin/mongod --dbpath ${PWD}/mongodb-${MONGODB_VERSION}/data --logpath ${PWD}/mongodb-${MONGODB_VERSION}/mongodb.log --enableMajorityReadConcern --fork
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then swiftlint; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then swiftlint --strict; fi
 
 script:
   - swift build -v
