Add initial Tests/.swiftlint.yml, stop ignore
Add the initial .swiftlint.yml file for Tests/ where we ignore the
force_try and force_cast rules, as well as enable linting to be done on
the Tests/ directory.

--- a/Tests/.swiftlint.yml
+++ b/Tests/.swiftlint.yml
@@ -5,6 +5,8 @@ disabled_rules:
   - todo
   - type_name
   - type_body_length
+  - force_try
+  - force_cast
 
 opt_in_rules:
   - vertical_parameter_alignment_on_call
@@ -20,4 +22,4 @@ opt_in_rules:
 excluded:
   - build
   - .build
-  - docs
+  - Specs
