--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,9 @@ install:
   - mkdir mongodb-${MONGODB_VERSION}
   - tar xzvf ${MONGODB_BASE}-${MONGODB_VERSION}.tgz -C mongodb-${MONGODB_VERSION} --strip-components 1
   - ${PWD}/mongodb-${MONGODB_VERSION}/bin/mongod --version
+
+  # install swiftenv
+  - eval "$(curl -sL https://swiftenv.fuller.li/install.sh)"
   
   # clone and build libmongoc
   - git clone -b r1.13 https://github.com/mongodb/mongo-c-driver /tmp/libmongoc
