--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,27 @@
-os:
-  - linux
-  - osx
 language: generic
 sudo: required
 dist: trusty
-osx_image: xcode9.4
 
-env:
-  matrix:
-    - MONGODB_VERSION=3.6.5 SWIFT_VERSION=4.0
-    - MONGODB_VERSION=3.6.5 SWIFT_VERSION=4.1
+matrix:
+  include:
+    - os: osx
+      osx_image: xcode9.4 
+      env: MONGODB_VERSION=3.6.5 SWIFT_VERSION=4.0
+    - os: osx
+      osx_image: xcode9.4
+      env: MONGODB_VERSION=3.6.5 SWIFT_VERSION=4.1
+    - os: osx
+      osx_image: xcode10.1
+      env: MONGODB_VERSION=3.6.5 SWIFT_VERSION=4.1
+    - os: osx
+      osx_image: xcode10.1
+      env: MONGODB_VERSION=3.6.5 SWIFT_VERSION=4.2
+    - os: linux
+      env: MONGODB_VERSION=3.6.5 SWIFT_VERSION=4.0
+    - os: linux
+      env: MONGODB_VERSION=3.6.5 SWIFT_VERSION=4.1
+    - os: linux
+      env: MONGODB_VERSION=3.6.5 SWIFT_VERSION=4.2
 
 install:
   - MONGODB_BASE="mongodb-linux-x86_64"
