--- a/Tests/MongoSwiftTests/.swiftlint.yml
+++ b/Tests/MongoSwiftTests/.swiftlint.yml
@@ -30,6 +30,7 @@ opt_in_rules:
   - sorted_first_last
   - sorted_imports
   - trailing_closure
+  - unneeded_parentheses_in_closure_argument
   - unused_import
   - unused_private_declaration
   - vertical_parameter_alignment_on_call
