--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -35,6 +35,8 @@ opt_in_rules:
   - unused_import
   - unused_private_declaration
   - vertical_parameter_alignment_on_call
+  - vertical_whitespace_closing_braces
+  - vertical_whitespace_opening_braces
 
 excluded:
   - build
