--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -26,6 +26,7 @@ opt_in_rules:
   - modifier_order
   - multiline_arguments
   - multiline_function_chains
+  - multiline_parameters
   - operator_usage_whitespace
   - pattern_matching_keywords
   - redundant_nil_coalescing
