--- a/Tests/MongoSwiftTests/.swiftlint.yml
+++ b/Tests/MongoSwiftTests/.swiftlint.yml
@@ -1,6 +1,7 @@
 disabled_rules:
+  - explicit_acl
   - force_cast
   - force_try
   - force_unwrapping
+  - implicitly_unwrapped_optional
   - nesting
-  - explicit_acl
