split linting and code coverage into separate variants, move installation into separate script

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,52 +4,45 @@ dist: trusty
 
 matrix:
   include:
+    - name: Lint
+      os: osx
+      env: TASK=LINT
+    - name: Code coverage
+      os: osx
+      osx_image: xcode10.1
+      env: MONGODB_VERSION=3.6.5 TASK=COV
     - os: osx
       osx_image: xcode9.4 
-      env: MONGODB_VERSION=3.6.5 SWIFT_VERSION=4.0
+      env: MONGODB_VERSION=3.6.5 SWIFT_VERSION=4.0 TASK=TEST
     - os: osx
       osx_image: xcode9.4
-      env: MONGODB_VERSION=3.6.5 SWIFT_VERSION=4.1
+      env: MONGODB_VERSION=3.6.5 SWIFT_VERSION=4.1 TASK=TEST
     - os: osx
       osx_image: xcode10.1
-      env: MONGODB_VERSION=3.6.5 SWIFT_VERSION=4.1
+      env: MONGODB_VERSION=3.6.5 SWIFT_VERSION=4.1 TASK=TEST
     - os: osx
       osx_image: xcode10.1
-      env: MONGODB_VERSION=3.6.5 SWIFT_VERSION=4.2
+      env: MONGODB_VERSION=3.6.5 SWIFT_VERSION=4.2 TASK=TEST
     - os: linux
-      env: MONGODB_VERSION=3.6.5 SWIFT_VERSION=4.0
+      env: MONGODB_VERSION=3.6.5 SWIFT_VERSION=4.0 TASK=TEST
     - os: linux
-      env: MONGODB_VERSION=3.6.5 SWIFT_VERSION=4.1
+      env: MONGODB_VERSION=3.6.5 SWIFT_VERSION=4.1 TASK=TEST
     - os: linux
-      env: MONGODB_VERSION=3.6.5 SWIFT_VERSION=4.2
+      env: MONGODB_VERSION=3.6.5 SWIFT_VERSION=4.2 TASK=TEST
 
 install:
-  - MONGODB_BASE="mongodb-linux-x86_64"
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then MONGODB_BASE="mongodb-osx-ssl-x86_64"; fi
-
-  # install mongodb
-  - wget http://fastdl.mongodb.org/${TRAVIS_OS_NAME}/${MONGODB_BASE}-${MONGODB_VERSION}.tgz
-  - mkdir mongodb-${MONGODB_VERSION}
-  - tar xzvf ${MONGODB_BASE}-${MONGODB_VERSION}.tgz -C mongodb-${MONGODB_VERSION} --strip-components 1
-  - ${PWD}/mongodb-${MONGODB_VERSION}/bin/mongod --version
-
-  # install swiftenv
-  - eval "$(curl -sL https://swiftenv.fuller.li/install.sh)"
-  
-  # clone and build libmongoc
-  - git clone -b r1.13 https://github.com/mongodb/mongo-c-driver /tmp/libmongoc
-  - pushd /tmp/libmongoc
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then cmake -DCMAKE_INSTALL_PREFIX:PATH=/usr/local; fi
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then cmake -DCMAKE_INSTALL_PREFIX:PATH=/usr; fi
-  - sudo make -j8 install
-  - popd
+  - if [[ "$TASK" == "TEST" ]]; then ./install.sh libmongoc; eval "$(curl -sL https://swiftenv.fuller.li/install.sh)"; ./install.sh mongodb; fi
+  - if [[ "$TASK" == "LINT" ]]; then ./install.sh swiftlint; fi
+  - if [[ "$TASK" == "COV" ]]; then ./install.sh libmongoc; ./install.sh mongodb; fi
 
 before_script:
-  - mkdir ${PWD}/mongodb-${MONGODB_VERSION}/data
-  - ${PWD}/mongodb-${MONGODB_VERSION}/bin/mongod --dbpath ${PWD}/mongodb-${MONGODB_VERSION}/data --logpath ${PWD}/mongodb-${MONGODB_VERSION}/mongodb.log --enableMajorityReadConcern --fork
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then mkdir ${PWD}/swiftlint; curl -L https://github.com/realm/SwiftLint/releases/download/0.29.3/portable_swiftlint.zip -o ${PWD}/swiftlint/swiftlint.zip; unzip ${PWD}/swiftlint/swiftlint.zip -d ${PWD}/swiftlint; fi
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then ${PWD}/swiftlint/swiftlint --strict; fi
+  - export MONGODIR=${PWD}/mongodb-${MONGODB_VERSION}
+  - if [[ "$TASK" != "LINT" ]]; then mkdir ${MONGODIR}/data; ${MONGODIR}/bin/mongod --dbpath ${MONGODIR}/data --logpath ${MONGODIR}/mongodb.log --fork; fi
 
 script:
-  - swift build -v
-  - swift test -v
+  - if [[ "$TASK" == "TEST" ]]; then make test-pretty; fi
+  - if [[ "$TASK" == "LINT" ]]; then ${PWD}/swiftlint/swiftlint --strict; fi 
+  - if [[ "$TASK" == "COV" ]]; then make cov; fi
+
+after_success:
+  - if [[ "$TASK" == "COV" ]]; then  bash <(curl -s https://codecov.io/bash); fi
