--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -3,19 +3,44 @@ disabled_rules:
   - function_body_length
   - identifier_name
   - todo
-  - type_name
   - type_body_length
+  - type_name
 
 opt_in_rules:
-  - vertical_parameter_alignment_on_call
-  - trailing_closure
-  - sorted_imports
-  - redundant_type_annotation
-  - operator_usage_whitespace
-  - modifier_order
-  - missing_docs
-  - implicit_return
+  - array_init
+  - collection_alignment
+  - contains_over_first_not_nil
+  - closure_end_indentation
+  - closure_spacing
+  - conditional_returns_on_newline
+  - empty_count
+  - empty_string
+  - explicit_acl
+  - explicit_init
+  - explicit_self
   - fatal_error_message
+  - first_where
+  - force_unwrapping
+  - implicit_return
+  - missing_docs
+  - modifier_order
+  - multiline_arguments
+  - multiline_function_chains
+  - multiline_literal_brackets
+  - multiline_parameters
+  - operator_usage_whitespace
+  - pattern_matching_keywords
+  - redundant_nil_coalescing
+  - redundant_type_annotation
+  - sorted_first_last
+  - sorted_imports
+  - trailing_closure
+  - unneeded_parentheses_in_closure_argument
+  - unused_import
+  - unused_private_declaration
+  - vertical_parameter_alignment_on_call
+  - vertical_whitespace_closing_braces
+  - vertical_whitespace_opening_braces
 
 excluded:
   - build
@@ -23,3 +48,8 @@ excluded:
   - docs
   - Examples/*/build
   - Examples/*/.build
+  - Sources/libbson
+  - Sources/libmongoc
+  - Package.swift
+  - Package@swift-4.2.swift
+  - Examples/*/Package.swift
