address Matt comments

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,47 +2,66 @@ language: generic
 sudo: required
 dist: trusty
 
-matrix:
+jobs:
   include:
-    - name: Lint
+    - stage: tests
       os: osx
-      env: TASK=LINT
-    - name: Code coverage
-      os: osx
-      osx_image: xcode10.1
-      env: MONGODB_VERSION=3.6.5 TASK=COV
-    - os: osx
-      osx_image: xcode9.4 
-      env: MONGODB_VERSION=3.6.5 SWIFT_VERSION=4.0 TASK=TEST
-    - os: osx
       osx_image: xcode9.4
-      env: MONGODB_VERSION=3.6.5 SWIFT_VERSION=4.1 TASK=TEST
-    - os: osx
+      env: SWIFT_VERSION=4.0
+
+    - stage: tests
+      os: osx
+      osx_image: xcode9.4
+      env: SWIFT_VERSION=4.1
+
+    - stage: tests
+      os: osx
       osx_image: xcode10.1
-      env: MONGODB_VERSION=3.6.5 SWIFT_VERSION=4.1 TASK=TEST
-    - os: osx
+      env: SWIFT_VERSION=4.1
+
+    - stage: tests
+      os: osx
       osx_image: xcode10.1
-      env: MONGODB_VERSION=3.6.5 SWIFT_VERSION=4.2 TASK=TEST
-    - os: linux
-      env: MONGODB_VERSION=3.6.5 SWIFT_VERSION=4.0 TASK=TEST
-    - os: linux
-      env: MONGODB_VERSION=3.6.5 SWIFT_VERSION=4.1 TASK=TEST
-    - os: linux
-      env: MONGODB_VERSION=3.6.5 SWIFT_VERSION=4.2 TASK=TEST
+      env: SWIFT_VERSION=4.2
+
+    - stage: tests
+      os: linux
+      env: SWIFT_VERSION=4.0
+
+    - stage: tests
+      os: linux
+      env: SWIFT_VERSION=4.1
+
+    - stage: tests
+      os: linux
+      env: SWIFT_VERSION=4.2
+
+    - stage: code coverage
+      os: osx
+      osx_image: xcode10.1
+      script: make coverage
+      after_success: bash <(curl -s https://codecov.io/bash)
+
+    - stage: lint
+      os: osx
+      install: ./Tests/Scripts/install_dependencies.sh swiftlint
+      before_script: skip
+      script: ${PWD}/swiftlint/swiftlint --strict
+
 
 install:
-  - if [[ "$TASK" == "TEST" ]]; then ./travis_install.sh libmongoc; eval "$(curl -sL https://swiftenv.fuller.li/install.sh)"; ./travis_install.sh mongodb; fi
-  - if [[ "$TASK" == "LINT" ]]; then ./travis_install.sh swiftlint; fi
-  - if [[ "$TASK" == "COV" ]]; then ./travis_install.sh libmongoc; ./travis_install.sh mongodb; fi
+  - INSTALLER=Tests/Scripts/install_dependencies.sh
+  - export LIBMONGOC_VERSION=r1.13
+  - export MONGODB_VERSION=3.6.5
+  - ./${INSTALLER} libmongoc
+  - ./${INSTALLER} mongodb
+  - if [[ "$TRAVIS_STAGE_NAME" != "Code coverage" ]]; then eval "$(curl -sL https://swiftenv.fuller.li/install.sh)"; fi
 
 before_script:
-  - export MONGODIR=${PWD}/mongodb-${MONGODB_VERSION}
-  - if [[ "$TASK" != "LINT" ]]; then mkdir ${MONGODIR}/data; ${MONGODIR}/bin/mongod --dbpath ${MONGODIR}/data --logpath ${MONGODIR}/mongodb.log --fork; fi
+  - MONGODIR=${PWD}/mongodb-${MONGODB_VERSION}
+  - mkdir ${MONGODIR}/data
+  - ${MONGODIR}/bin/mongod --dbpath ${MONGODIR}/data --logpath ${MONGODIR}/mongodb.log --fork
 
 script:
-  - if [[ "$TASK" == "TEST" ]]; then make test-pretty; fi
-  - if [[ "$TASK" == "LINT" ]]; then ${PWD}/swiftlint/swiftlint --strict; fi 
-  - if [[ "$TASK" == "COV" ]]; then make cov; fi
-
-after_success:
-  - if [[ "$TASK" == "COV" ]]; then  bash <(curl -s https://codecov.io/bash); fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then make test-pretty; fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then make test; fi
