Enable SwiftLint trailing_whitespace rule in comments (#234)

--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -51,5 +51,7 @@ excluded:
   - Sources/libbson
   - Sources/libmongoc
   - Package.swift
-  - Package@swift-4.2.swift
   - Examples/*/Package.swift
+
+trailing_whitespace:
+  ignores_comments: false
