SWIFT-276: Swift 5 support
* Swift 5 support

This adds support for compiler(>=5.0)

* Use libbson for dependable JSON serialization

JSONSerialization changed how they serialized JSON between v4 and
v5, so we'll use libbson for JSON cleaning for now.

* add Swift 5 travis configurations

* Update to Nimble 8.x

* read the BSON length directly from the `bson_t`s internal data

* fix linting errors

* address review comments

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,8 +23,22 @@ jobs:
       env: SWIFT_VERSION=4.2
 
     - stage: tests
+      os: osx
+      osx_image: xcode10.2
+      env: SWIFT_VERSION=4.2
+
+    - stage: tests
+      os: osx
+      osx_image: xcode10.2
+      env: SWIFT_VERSION=5.0
+
+    - stage: tests
       os: linux
       env: SWIFT_VERSION=4.2
+
+    - stage: tests
+      os: linux
+      env: SWIFT_VERSION=5.0
 
     - stage: post-tests
       name: code coverage
