--- a/.evergreen/config.yml
+++ b/.evergreen/config.yml
@@ -11,7 +11,7 @@ command_type: system
 # Protect ourself against rogue test case, or curl gone wild, that runs forever
 # Good rule of thumb: the averageish length a task takes, times 5
 # That roughly accounts for variable system performance for various buildvariants
-exec_timeout_secs: 1800 # 6 minutes is the longest we'll ever run
+exec_timeout_secs: 1800 # 30 minutes is the longest we'll ever run
 
 # What to do when evergreen hits the timeout (`post:` tasks are run automatically)
 timeout:
@@ -41,7 +41,7 @@ functions:
               CURRENT_VERSION=latest
            fi
 
-           export DRIVERS_TOOLS="$(pwd)/../drivers-tools"
+           export DRIVERS_TOOLS="$(dirname $(pwd))/drivers-tools"
            export PROJECT_DIRECTORY="$(pwd)"
 
            # Python has cygwin path problems on Windows. Detect prospective mongo-orchestration home directory
@@ -96,75 +96,23 @@ functions:
           fi
           echo "{ \"releases\": { \"default\": \"$MONGODB_BINARIES\" }}" > $MONGO_ORCHESTRATION_HOME/orchestration.config
 
-  # Upload build artifacts that other tasks may depend on
-  # Note this URL needs to be totally unique, while predictable for the next task
-  # so it can automatically download the artifacts
-  # "upload build":
-  #   # Compress and upload the entire build directory
-  #   - command: archive.targz_pack
-  #     params:
-  #       # Example: mongo_c_driver_releng_9dfb7d741efbca16faa7859b9349d7a942273e43_16_11_08_19_29_52.tar.gz
-  #       target: "${build_id}.tar.gz"
-  #       source_dir: ${PROJECT_DIRECTORY}/
-  #       include:
-  #         - "./**"
-  #   - command: s3.put
-  #     params:
-  #       aws_key: ${aws_key}
-  #       aws_secret: ${aws_secret}
-  #       local_file: ${build_id}.tar.gz
-  #       # Example: /mciuploads/${UPLOAD_BUCKET}/gcc49/9dfb7d741efbca16faa7859b9349d7a942273e43/debug-compile-nosasl-nossl/mongo_c_driver_releng_9dfb7d741efbca16faa7859b9349d7a942273e43_16_11_08_19_29_52.tar.gz
-  #       remote_file: ${UPLOAD_BUCKET}/${build_variant}/${revision}/${task_name}/${build_id}.tar.gz
-  #       bucket: mciuploads
-  #       permissions: public-read
-  #       content_type: ${content_type|application/x-gzip}
-
-  # "fetch build":
-  #   - command: shell.exec
-  #     params:
-  #       continue_on_err: true
-  #       script: "set -o xtrace && rm -rf ${PROJECT_DIRECTORY}"
-  #   - command: s3.get
-  #     params:
-  #       aws_key: ${aws_key}
-  #       aws_secret: ${aws_secret}
-  #       remote_file: ${UPLOAD_BUCKET}/${build_variant}/${revision}/${BUILD_NAME}/${build_id}.tar.gz
-  #       bucket: mciuploads
-  #       local_file: build.tar.gz
-  #   - command: shell.exec
-  #     params:
-  #       continue_on_err: true
-  #       # EVG-1105: Use s3.get extract_to: ./
-  #       script: "set -o xtrace && cd .. && rm -rf ${PROJECT_DIRECTORY} && mkdir ${PROJECT_DIRECTORY}/ && tar xf build.tar.gz -C ${PROJECT_DIRECTORY}/"
-
-  "exec compile script" :
-    - command: shell.exec
-      type: test
-      params:
-        working_dir: "src"
-        script: |
-          ${PREPARE_SHELL}
-          [ -f ${PROJECT_DIRECTORY}/${file} ] && BUILDTOOL="${buildtool}" sh ${PROJECT_DIRECTORY}/${file} || echo "${PROJECT_DIRECTORY}/${file} not available, skipping"
-
-  "exec script" :
-    - command: shell.exec
-      type: test
-      params:
-        working_dir: "src"
-        script: |
-          ${PREPARE_SHELL}
-          [ -f ${PROJECT_DIRECTORY}/${file} ] && sh ${PROJECT_DIRECTORY}/${file} || echo "${PROJECT_DIRECTORY}/${file} not available, skipping"
-
   "bootstrap mongo-orchestration":
     - command: shell.exec
       params:
         script: |
           ${PREPARE_SHELL}
-          MONGODB_VERSION=${VERSION} TOPOLOGY=${TOPOLOGY} AUTH=${AUTH} SSL=${SSL} STORAGE_ENGINE=${STORAGE_ENGINE} sh ${DRIVERS_TOOLS}/.evergreen/run-orchestration.sh
+          MONGODB_VERSION=${MONGODB_VERSION} \
+            TOPOLOGY=${TOPOLOGY} \
+            sh ${DRIVERS_TOOLS}/.evergreen/run-orchestration.sh
     # run-orchestration generates expansion file with the MONGODB_URI for the cluster
     - command: expansions.update
       params:
         file: mo-expansion.yml
+    - command: expansions.update
+      params:
+        updates:
+          - key: MONGODB_STARTED
+            value: "1"
 
   "stop mongo-orchestration":
     - command: shell.exec
@@ -180,8 +128,21 @@ functions:
         working_dir: "src"
         script: |
           ${PREPARE_SHELL}
-          export ${COMPILE_ENV|}
-          AUTH=${AUTH} SSL=${SSL} MONGODB_URI="${MONGODB_URI}" sh ${PROJECT_DIRECTORY}/.evergreen/run-tests.sh
+
+          MONGODB_URI=${MONGODB_URI} \
+          TOPOLOGY=${TOPOLOGY} \
+          SWIFT_VERSION=${SWIFT_VERSION} \
+            sh ${PROJECT_DIRECTORY}/.evergreen/run-tests.sh
+
+  "run atlas tests":
+    - command: shell.exec
+      type: test
+      params:
+        silent: true
+        working_dir: "src"
+        script: |
+          # DO NOT ECHO WITH XTRACE (which PREPARE_SHELL does)
+          PYTHON_BINARY=${PYTHON_BINARY} ATLAS_REPL='${atlas_repl}' ATLAS_SHRD='${atlas_shrd}' ATLAS_FREE='${atlas_free}' ATLAS_TLS11='${atlas_tls11}' ATLAS_TLS12='${atlas_tls12}'  sh ${PROJECT_DIRECTORY}/.evergreen/run-atlas-tests.sh
 
   "cleanup":
     - command: shell.exec
@@ -199,30 +160,19 @@ functions:
             perl -p -i -e "s|ABSOLUTE_PATH_REPLACEMENT_TOKEN|${DRIVERS_TOOLS}|g" $filename
           done
 
-  "make files executable":
-    - command: shell.exec
-      params:
-        script: |
-          ${PREPARE_SHELL}
-          for i in $(find ${DRIVERS_TOOLS}/.evergreen ${PROJECT_DIRECTORY}/.evergreen -name \*.sh); do
-            chmod +x $i
-          done
-
   "install dependencies":
     - command: shell.exec
       params:
         working_dir: "src"
         script: |
           ${PREPARE_SHELL}
-          file="${PROJECT_DIRECTORY}/.evergreen/install-dependencies.sh"
-          # Don't use ${file} syntax here because evergreen treats it as an empty expansion.
-          [ -f "$file" ] && sh $file || echo "$file not available, skipping"
+
+          SWIFT_VERSION=${SWIFT_VERSION} \
+            sh ${PROJECT_DIRECTORY}/.evergreen/install-dependencies.sh
 
 pre:
   - func: "fetch source"
   - func: "prepare resources"
-  - func: "fix absolute paths"
-  - func: "make files executable"
   - func: "install dependencies"
 
 post:
@@ -230,121 +180,12 @@ post:
   - func: "cleanup"
 
 tasks:
-# Standard test tasks {{{
-
-    - name: "test-2.6-standalone"
-      tags: ["2.6", "standalone"]
-      commands:
-        - func: "bootstrap mongo-orchestration"
-          vars:
-            VERSION: "2.6"
-            TOPOLOGY: "server"
-        - func: "run tests"
-
-    - name: "test-2.6-replica_set"
-      tags: ["2.6", "replica_set"]
-      commands:
-        - func: "bootstrap mongo-orchestration"
-          vars:
-            VERSION: "2.6"
-            TOPOLOGY: "replica_set"
-        - func: "run tests"
-
-    - name: "test-2.6-sharded_cluster"
-      tags: ["2.6", "sharded_cluster"]
-      commands:
-        - func: "bootstrap mongo-orchestration"
-          vars:
-            VERSION: "2.6"
-            TOPOLOGY: "sharded_cluster"
-        - func: "run tests"
-
-    - name: "test-3.0-standalone"
-      tags: ["3.0", "standalone"]
-      commands:
-        - func: "bootstrap mongo-orchestration"
-          vars:
-            VERSION: "3.0"
-            TOPOLOGY: "server"
-        - func: "run tests"
-
-    - name: "test-3.0-replica_set"
-      tags: ["3.0", "replica_set"]
-      commands:
-        - func: "bootstrap mongo-orchestration"
-          vars:
-            VERSION: "3.0"
-            TOPOLOGY: "replica_set"
-        - func: "run tests"
-
-    - name: "test-3.0-sharded_cluster"
-      tags: ["3.0", "sharded_cluster"]
-      commands:
-        - func: "bootstrap mongo-orchestration"
-          vars:
-            VERSION: "3.0"
-            TOPOLOGY: "sharded_cluster"
-        - func: "run tests"
-
-    - name: "test-3.2-standalone"
-      tags: ["3.2", "standalone"]
-      commands:
-        - func: "bootstrap mongo-orchestration"
-          vars:
-            VERSION: "3.2"
-            TOPOLOGY: "server"
-        - func: "run tests"
-
-    - name: "test-3.2-replica_set"
-      tags: ["3.2", "replica_set"]
-      commands:
-        - func: "bootstrap mongo-orchestration"
-          vars:
-            VERSION: "3.2"
-            TOPOLOGY: "replica_set"
-        - func: "run tests"
-
-    - name: "test-3.2-sharded_cluster"
-      tags: ["3.2", "sharded_cluster"]
-      commands:
-        - func: "bootstrap mongo-orchestration"
-          vars:
-            VERSION: "3.2"
-            TOPOLOGY: "sharded_cluster"
-        - func: "run tests"
-
-    - name: "test-3.4-standalone"
-      tags: ["3.4", "standalone"]
-      commands:
-        - func: "bootstrap mongo-orchestration"
-          vars:
-            VERSION: "3.4"
-            TOPOLOGY: "server"
-        - func: "run tests"
-
-    - name: "test-3.4-replica_set"
-      tags: ["3.4", "replica_set"]
-      commands:
-        - func: "bootstrap mongo-orchestration"
-          vars:
-            VERSION: "3.4"
-            TOPOLOGY: "replica_set"
-        - func: "run tests"
-
-    - name: "test-3.4-sharded_cluster"
-      tags: ["3.4", "sharded_cluster"]
-      commands:
-        - func: "bootstrap mongo-orchestration"
-          vars:
-            VERSION: "3.4"
-            TOPOLOGY: "sharded_cluster"
-        - func: "run tests"
     - name: "test-3.6-standalone"
       tags: ["3.6", "standalone"]
       commands:
         - func: "bootstrap mongo-orchestration"
           vars:
-            VERSION: "3.6"
+            MONGODB_VERSION: "3.6"
             TOPOLOGY: "server"
         - func: "run tests"
 
@@ -353,7 +194,7 @@ tasks:
       commands:
         - func: "bootstrap mongo-orchestration"
           vars:
-            VERSION: "3.6"
+            MONGODB_VERSION: "3.6"
             TOPOLOGY: "replica_set"
         - func: "run tests"
 
@@ -362,7 +203,34 @@ tasks:
       commands:
         - func: "bootstrap mongo-orchestration"
           vars:
-            VERSION: "3.6"
+            MONGODB_VERSION: "3.6"
+            TOPOLOGY: "sharded_cluster"
+        - func: "run tests"
+
+    - name: "test-4.0-standalone"
+      tags: ["4.0", "standalone"]
+      commands:
+        - func: "bootstrap mongo-orchestration"
+          vars:
+            MONGODB_VERSION: "4.0"
+            TOPOLOGY: "server"
+        - func: "run tests"
+
+    - name: "test-4.0-replica_set"
+      tags: ["4.0", "replica_set"]
+      commands:
+        - func: "bootstrap mongo-orchestration"
+          vars:
+            MONGODB_VERSION: "4.0"
+            TOPOLOGY: "replica_set"
+        - func: "run tests"
+
+    - name: "test-4.0-sharded_cluster"
+      tags: ["4.0", "sharded_cluster"]
+      commands:
+        - func: "bootstrap mongo-orchestration"
+          vars:
+            MONGODB_VERSION: "4.0"
             TOPOLOGY: "sharded_cluster"
         - func: "run tests"
 
@@ -371,7 +239,7 @@ tasks:
       commands:
         - func: "bootstrap mongo-orchestration"
           vars:
-            VERSION: "latest"
+            MONGODB_VERSION: "latest"
             TOPOLOGY: "server"
         - func: "run tests"
 
@@ -380,7 +248,7 @@ tasks:
       commands:
         - func: "bootstrap mongo-orchestration"
           vars:
-            VERSION: "latest"
+            MONGODB_VERSION: "latest"
             TOPOLOGY: "replica_set"
         - func: "run tests"
 
@@ -389,11 +257,14 @@ tasks:
       commands:
         - func: "bootstrap mongo-orchestration"
           vars:
-            VERSION: "latest"
+            MONGODB_VERSION: "latest"
             TOPOLOGY: "sharded_cluster"
         - func: "run tests"
 
-# }}}
+    - name: "atlas-connect"
+      tags: ["atlas-connect"]
+      commands:
+        - func: "run atlas tests"
 
 
 axes:
@@ -403,36 +274,27 @@ axes:
       - id: "latest"
         display_name: "latest"
         variables:
-           VERSION: "latest"
+           MONGODB_VERSION: "latest"
+      - id: "4.0"
+        display_name: "4.0"
+        variables:
+           MONGODB_VERSION: "4.0"
       - id: "3.6"
         display_name: "3.6"
         variables:
-           VERSION: "3.6"
-      - id: "3.4"
-        display_name: "3.4"
-        variables:
-           VERSION: "3.4"
-      - id: "3.2"
-        display_name: "3.2"
-        variables:
-           VERSION: "3.2"
-      - id: "3.0"
-        display_name: "3.0"
-        variables:
-           VERSION: "3.0"
-      - id: "2.6"
-        display_name: "2.6"
-        variables:
-           VERSION: "2.6"
+           MONGODB_VERSION: "3.6"
 
   - id: os-fully-featured
     display_name: OS
     values:
-      - id: macos-1012
-        display_name: "macOS 10.12"
-        run_on: macos-1012
-        variables:
-          COMPILE_ENV: DEVELOPER_DIR=/Applications/Xcode9.2.app
+      - id: ubuntu-18.04
+        display_name: "Ubuntu 18.04"
+        run_on: ubuntu1804-test
+        batchtime: 10080  # 7 days
+
+      # - id: macos-1012
+      #   display_name: "macOS 10.12"
+      #   run_on: macos-1012
 
   - id: topology
     display_name: Topology
@@ -449,67 +311,27 @@ axes:
         display_name: Sharded Cluster
         variables:
            TOPOLOGY: "sharded_cluster"
-  - id: auth
-    display_name: Authentication
+  - id: swift-version
+    display_name: "Swift"
     values:
-      - id: auth
-        display_name: Auth
+      - id: "4.2"
+        display_name: "Swift 4.2"
         variables:
-           AUTH: "auth"
-      - id: noauth
-        display_name: NoAuth
+           SWIFT_VERSION: "4.2"
+      - id: "5.0"
+        display_name: "Swift 5.0"
         variables:
-           AUTH: "noauth"
-  - id: ssl
-    display_name: SSL
-    values:
-      - id: ssl
-        display_name: SSL
-        variables:
-           SSL: "ssl"
-      - id: nossl
-        display_name: NoSSL
-        variables:
-           SSL: "nossl"
-  - id: storage-engine
-    display_name: Storage
-    values:
-      - id: mmapv1
-        display_name: MMAPv1
-        variables:
-           STORAGE_ENGINE: "mmapv1"
-      - id: wiredtiger
-        display_name: WiredTiger
-        variables:
-           STORAGE_ENGINE: "wiredtiger"
-      - id: inmemory
-        display_name: InMemory
-        variables:
-           STORAGE_ENGINE: "inmemory"
+           SWIFT_VERSION: "5.0"
+
 
 
 buildvariants:
+
 - matrix_name: "tests-all"
-#  matrix_spec: {"os-fully-featured": "*", auth: "*", ssl: "*" } // reenable when SSL support is added to the driver
-  matrix_spec: {"os-fully-featured": "*", auth: "noauth", ssl: "nossl" }
-  display_name: "${os-fully-featured} ${auth} ${ssl}"
+  matrix_spec: {"os-fully-featured": "*", "swift-version": "*"}
+  display_name: "${swift-version} ${os-fully-featured}"
   tasks:
-     - name: "test-latest-replica_set"
-     - name: "test-latest-sharded_cluster"
-     - name: "test-latest-standalone"
-     - name: "test-3.6-replica_set"
-     - name: "test-3.6-sharded_cluster"
-     - name: "test-3.6-standalone"
-     - name: "test-3.4-replica_set"
-     - name: "test-3.4-sharded_cluster"
-     - name: "test-3.4-standalone"
-     - name: "test-3.2-replica_set"
-     - name: "test-3.2-sharded_cluster"
-     - name: "test-3.2-standalone"
-     - name: "test-3.0-replica_set"
-     - name: "test-3.0-sharded_cluster"
-     - name: "test-3.0-standalone"
-     - name: "test-2.6-replica_set"
-     - name: "test-2.6-sharded_cluster"
-     - name: "test-2.6-standalone"
+     - ".latest"
+     - ".4.0"
+     - ".3.6"
 
