SWIFT-399: enable evg builds on OSX hosts
This is dependent on a branch of `swiftenv` on my local github
account to work, that will hopefully be resolved shortly. Other
items of note here are that we only build on the macos-1014 hosts
due to XCode version requirements, and some tricky linker lines
to accommodate rpath linking to libmongoc.

--- a/.evergreen/config.yml
+++ b/.evergreen/config.yml
@@ -292,9 +292,9 @@ axes:
         run_on: ubuntu1804-test
         batchtime: 10080  # 7 days
 
-      # - id: macos-1012
-      #   display_name: "macOS 10.12"
-      #   run_on: macos-1012
+      - id: macos-1014
+        display_name: "macOS 10.14"
+        run_on: macos-1014
 
   - id: topology
     display_name: Topology
