Swiftlint should ignore LinuxMain.swift

--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -52,6 +52,7 @@ excluded:
   - Sources/libmongoc
   - Package.swift
   - Examples/*/Package.swift
+  - Tests/LinuxMain.swift
 
 trailing_whitespace:
   ignores_comments: false
