Add Atlas tests and update evg config to run them on Ubuntu

--- a/.evergreen/config.yml
+++ b/.evergreen/config.yml
@@ -142,7 +142,7 @@ functions:
         working_dir: "src"
         script: |
           # DO NOT ECHO WITH XTRACE (which PREPARE_SHELL does)
-          PYTHON_BINARY=${PYTHON_BINARY} ATLAS_REPL='${atlas_repl}' ATLAS_SHRD='${atlas_shrd}' ATLAS_FREE='${atlas_free}' ATLAS_TLS11='${atlas_tls11}' ATLAS_TLS12='${atlas_tls12}'  sh ${PROJECT_DIRECTORY}/.evergreen/run-atlas-tests.sh
+          SWIFT_VERSION=${SWIFT_VERSION} ATLAS_REPL='${ATLAS_REPL}' ATLAS_SHRD='${ATLAS_SHRD}' ATLAS_FREE='${ATLAS_FREE}' ATLAS_TLS11='${ATLAS_TLS11}' ATLAS_TLS12='${ATLAS_TLS12}'  sh ${PROJECT_DIRECTORY}/.evergreen/run-atlas-tests.sh
 
   "cleanup":
     - command: shell.exec
@@ -172,100 +172,121 @@ functions:
 
 pre:
   - func: "fetch source"
-  - func: "prepare resources"
   - func: "install dependencies"
-
-post:
-  - func: "stop mongo-orchestration"
-  - func: "cleanup"
 
 tasks:
     - name: "test-3.6-standalone"
       tags: ["3.6", "standalone"]
       commands:
+        - func: "prepare resources"
         - func: "bootstrap mongo-orchestration"
           vars:
             MONGODB_VERSION: "3.6"
             TOPOLOGY: "server"
         - func: "run tests"
+        - func: "stop mongo-orchestration"
+        - func: "cleanup"
 
     - name: "test-3.6-replica_set"
       tags: ["3.6", "replica_set"]
       commands:
+        - func: "prepare resources"
         - func: "bootstrap mongo-orchestration"
           vars:
             MONGODB_VERSION: "3.6"
             TOPOLOGY: "replica_set"
         - func: "run tests"
+        - func: "stop mongo-orchestration"
+        - func: "cleanup"        
 
     - name: "test-3.6-sharded_cluster"
       tags: ["3.6", "sharded_cluster"]
       commands:
+        - func: "prepare resources"
         - func: "bootstrap mongo-orchestration"
           vars:
             MONGODB_VERSION: "3.6"
             TOPOLOGY: "sharded_cluster"
         - func: "run tests"
+        - func: "stop mongo-orchestration"
+        - func: "cleanup"        
 
     - name: "test-4.0-standalone"
       tags: ["4.0", "standalone"]
       commands:
+        - func: "prepare resources"
         - func: "bootstrap mongo-orchestration"
           vars:
             MONGODB_VERSION: "4.0"
             TOPOLOGY: "server"
         - func: "run tests"
+        - func: "stop mongo-orchestration"
+        - func: "cleanup"
 
     - name: "test-4.0-replica_set"
       tags: ["4.0", "replica_set"]
       commands:
+        - func: "prepare resources"
         - func: "bootstrap mongo-orchestration"
           vars:
             MONGODB_VERSION: "4.0"
             TOPOLOGY: "replica_set"
         - func: "run tests"
+        - func: "stop mongo-orchestration"
+        - func: "cleanup"
 
     - name: "test-4.0-sharded_cluster"
       tags: ["4.0", "sharded_cluster"]
       commands:
+        - func: "prepare resources"
         - func: "bootstrap mongo-orchestration"
           vars:
             MONGODB_VERSION: "4.0"
             TOPOLOGY: "sharded_cluster"
         - func: "run tests"
+        - func: "stop mongo-orchestration"
+        - func: "cleanup"
 
     - name: "test-latest-standalone"
       tags: ["latest", "standalone"]
       commands:
+        - func: "prepare resources"
         - func: "bootstrap mongo-orchestration"
           vars:
             MONGODB_VERSION: "latest"
             TOPOLOGY: "server"
         - func: "run tests"
+        - func: "stop mongo-orchestration"
+        - func: "cleanup"
 
     - name: "test-latest-replica_set"
       tags: ["latest", "replica_set"]
       commands:
+        - func: "prepare resources"
         - func: "bootstrap mongo-orchestration"
           vars:
             MONGODB_VERSION: "latest"
             TOPOLOGY: "replica_set"
         - func: "run tests"
+        - func: "stop mongo-orchestration"
+        - func: "cleanup"
 
     - name: "test-latest-sharded_cluster"
       tags: ["latest", "sharded_cluster"]
       commands:
+        - func: "prepare resources"
         - func: "bootstrap mongo-orchestration"
           vars:
             MONGODB_VERSION: "latest"
             TOPOLOGY: "sharded_cluster"
         - func: "run tests"
+        - func: "stop mongo-orchestration"
+        - func: "cleanup"
 
-    - name: "atlas-connect"
+    - name: "test-atlas-connectivity"
       tags: ["atlas-connect"]
       commands:
         - func: "run atlas tests"
-
 
 axes:
   - id: versions
@@ -326,11 +347,44 @@ axes:
 
 buildvariants:
 
-- matrix_name: "tests-all"
-  matrix_spec: {"os-fully-featured": "*", "swift-version": "*"}
-  display_name: "${swift-version} ${os-fully-featured}"
+- name: "swift42-macOS"
+  display_name: "Swift 4.2 MacOS 10.14"
+  run_on: macos-1014
+  variables:
+    SWIFT_VERSION: "4.2"
   tasks:
      - ".latest"
      - ".4.0"
      - ".3.6"
 
+- name: "swift50-macOS"
+  display_name: "Swift 5.0 MacOS 10.14"
+  run_on: macos-1014
+  variables:
+    SWIFT_VERSION: "5.0"
+  tasks:
+     - ".latest"
+     - ".4.0"
+     - ".3.6"
+
+- name: "swift42-ubuntu"
+  display_name: "Swift 4.2 Ubuntu 18.04"
+  run_on: ubuntu1804-test
+  variables:
+    SWIFT_VERSION: "4.2"
+  tasks:
+     - ".latest"
+     - ".4.0"
+     - ".3.6"
+     - ".atlas-connect"
+
+- name: "swift50-ubuntu"
+  display_name: "Swift 5.0 Ubuntu 18.04"
+  run_on: ubuntu1804-test
+  variables:
+    SWIFT_VERSION: "5.0"
+  tasks:
+     - ".latest"
+     - ".4.0"
+     - ".3.6"
+     - ".atlas-connect"
